Wed Oct 23 22:51:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC 2013 supports C99 mathematics
	  functions.  [ruby-core:57981] [Bug #9044]

Wed Oct 23 19:13:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: move increment from heap to heap_pages.
	  Share `increment' information with heaps.

	* gc.c: change ratio of heap_pages_free_min_page
	  to 0.80.
	  This change means slow down page freeing speed.

Wed Oct 23 17:52:03 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_pages_free_unused_pages): cast to (int) for size_t
	  variable `i'.

Wed Oct 23 17:39:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce tomb heap.
	  Tomb heap is where zombie objects and ghost (freed slot) lived in.
	  Separate from other heaps (now there is only eden heap) at sweeping
	  helps freeing pages more efficiently.
	  Before this patch, even if there is an empty page at former phase
	  of sweeping, we can't free it.

	  Algorithm:
	    (1) Sweeping all pages in a heap and move empty pages from the
	        heap to tomb_heap.
	    (2) Check all exsisting pages and free a page
	        if all slots of this page are empty and
	           there is enough empty slots (checking by swept_num)

	  To introduce this pach, there are several tuning of GC parameters.

Wed Oct 23 14:20:56 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_sweep_timer_stop): catch up recent changes
	  to compile on GC_PROFILE_MORE_DETAIL=1.

Wed Oct 23 11:43:27 2013  Zachary Scott  <e@zzak.io>

	* file.c: [DOC] fix rdoc format of File#expand_path from r43386

Tue Oct 22 21:58:28 2013  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (enum): avoid syntax error.

	* method.h: ditto.

	* internal.h: ditto.

Tue Oct 22 19:53:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (Init_heap): move logics from heap_pages_init() and remove
	  heap_pages_init().

Tue Oct 22 19:19:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: allow multiple heaps.